# veracity

./: README.md  pyproject.toml  setup.py
tests/: test_veracity.py
veracity/: __init__.py  veracity.py
